--- a/programs/test/CMakeLists.txt
+++ b/programs/test/CMakeLists.txt
@@ -10,27 +10,35 @@ if(ENABLE_ZLIB_SUPPORT)
     set(libs ${libs} ${ZLIB_LIBRARIES})
 endif(ENABLE_ZLIB_SUPPORT)
 
-add_executable(selftest selftest.c)
-target_link_libraries(selftest ${libs})
+add_executable(${MBEDTLS_EXAMPLES_PREFIX_}selftest selftest.c)
+target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}selftest ${libs})
+SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}selftest PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 
-add_executable(benchmark benchmark.c)
-target_link_libraries(benchmark ${libs})
+add_executable(${MBEDTLS_EXAMPLES_PREFIX_}benchmark benchmark.c)
+target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}benchmark ${libs})
+SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}benchmark PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 
 if(TEST_CPP)
-    add_executable(cpp_dummy_build cpp_dummy_build.cpp)
-    target_link_libraries(cpp_dummy_build ${libs})
+    add_executable(${MBEDTLS_EXAMPLES_PREFIX_}cpp_dummy_build cpp_dummy_build.cpp)
+    target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}cpp_dummy_build ${libs})
+    SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}cpp_dummy_build PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 endif()
 
-add_executable(udp_proxy udp_proxy.c)
-target_link_libraries(udp_proxy ${libs})
+add_executable(${MBEDTLS_EXAMPLES_PREFIX_}udp_proxy udp_proxy.c)
+target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}udp_proxy ${libs})
+SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}udp_proxy PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 
-add_executable(zeroize zeroize.c)
-target_link_libraries(zeroize ${libs})
+add_executable(${MBEDTLS_EXAMPLES_PREFIX_}zeroize zeroize.c)
+target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}zeroize ${libs})
+SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}zeroize PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 
-add_executable(query_compile_time_config query_compile_time_config.c)
-target_sources(query_compile_time_config PUBLIC ../ssl/query_config.c)
-target_link_libraries(query_compile_time_config ${libs})
+add_executable(${MBEDTLS_EXAMPLES_PREFIX_}query_compile_time_config query_compile_time_config.c)
+target_sources(${MBEDTLS_EXAMPLES_PREFIX_}query_compile_time_config PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../ssl/query_config.c)
+target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}query_compile_time_config ${libs})
+SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}query_compile_time_config PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/test)
 
-install(TARGETS selftest benchmark udp_proxy query_compile_time_config
+IF(MBEDTLS_ENABLE_INSTALL)
+install(TARGETS ${MBEDTLS_EXAMPLES_PREFIX_}selftest ${MBEDTLS_EXAMPLES_PREFIX_}benchmark ${MBEDTLS_EXAMPLES_PREFIX_}udp_proxy ${MBEDTLS_EXAMPLES_PREFIX_}query_compile_time_config
         DESTINATION "bin"
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+ENDIF(MBEDTLS_ENABLE_INSTALL)
