--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "crypto"]
 	path = crypto
-	url = https://github.com/ARMmbed/mbed-crypto
-	branch = development
+	url = https://github.com/OlivierLDff/mbed-crypto
+	branch = mbedcrypto-1.1.1-Superbuild
