--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ function(add_test_suite suite_name)
     if(${data_name} MATCHES ${SKIP_TEST_SUITES_REGEX})
         message(STATUS "The test suite ${data_name} will not be executed.")
     else()
+        MESSAGE(STATUS "Add CTest: ${MBEDTLS_TESTS_PREFIX_}${data_name}-suite")
         add_test(${MBEDTLS_TESTS_PREFIX_}${data_name}-suite ${exe_name} --verbose)
     endif()
 endfunction(add_test_suite)
